test/error/E48.1.chifn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": 32
}
